<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <SurfaceView
        android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

    <FrameLayout
        android:id="@+id/fl_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_5">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_action_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:src="@drawable/icon_arrows_left"
            android:tint="@color/colorWhite" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dp_55"
            android:gravity="center"
            android:text="@string/video_default_title"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dp_17" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_lock"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/dp_5"
        android:padding="@dimen/dp_10"
        android:scaleType="centerCrop"
        android:src="@drawable/icon_video_lock_open" />

    <com.common.weight.video.VideoPlayButton
        android:id="@+id/view_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/ll_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/dp_5"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_15">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_player_view_play_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_14" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/sb_player_view_progress"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foreground="@null"
            android:max="100"
            android:maxHeight="@dimen/dp_2"
            android:paddingVertical="@dimen/dp_10"
            android:progress="50"
            android:progressDrawable="@drawable/bg_video_progress"
            android:secondaryProgress="80"
            android:thumb="@drawable/bg_video_progress_ball" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_player_view_total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10:00"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_14" />

        <!-- 倍速按钮：位于总时长之后、方向按钮之前，文本由代码同步为当前生效的常驻倍速 -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_player_view_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            android:clickable="true"
            android:contentDescription="@string/video_speed_action"
            android:focusable="true"
            android:gravity="center"
            android:minWidth="@dimen/dp_40"
            android:paddingTop="@dimen/dp_8"
            android:paddingBottom="@dimen/dp_8"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_14"
            tools:text="1.0x" />

        <!-- 横竖屏切换按钮：控制栏最后一项 -->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_player_view_orientation"
            android:layout_width="@dimen/dp_36"
            android:layout_height="@dimen/dp_36"
            android:layout_marginStart="@dimen/dp_8"
            android:clickable="true"
            android:contentDescription="@string/video_orientation_to_portrait"
            android:focusable="true"
            android:padding="@dimen/dp_6"
            android:src="@drawable/video_orientation_portrait_ic" />
    </LinearLayout>

    <!-- 倍速选择面板：仅六个固定档位，档位内容由代码构建 -->
    <LinearLayout
        android:id="@+id/ll_player_view_speed_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_45"
        android:background="@drawable/bg_video_speed_panel"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_6"
        android:paddingBottom="@dimen/dp_6"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_player_view_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="@dimen/dp_15"
        app:cardElevation="0px"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="@dimen/dp_110"
            android:minHeight="@dimen/dp_110"
            android:orientation="vertical"
            android:padding="@dimen/dp_10">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_message"
                android:layout_width="@dimen/dp_70"
                android:layout_height="@dimen/dp_70" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_5"
                android:maxLines="3"
                android:textColor="@color/white"
                android:textSize="@dimen/dp_14" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <!-- 长按临时 3 倍速提示：独立于中央手势提示区域，长按期间常驻显示。
         顶部留出状态栏高度的外边距，避免被系统栏或刘海遮挡。 -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_player_view_speed_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="@dimen/dp_50"
        android:background="@drawable/bg_video_speed_tip"
        android:text="@string/video_speed_temporary_tip"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_14"
        android:visibility="gone"
        tools:visibility="visible" />

    <!-- 播放失败面板：明确提示 + 重试入口；退出入口复用顶部返回按钮 -->
    <LinearLayout
        android:id="@+id/ll_player_view_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp_30"
        android:paddingEnd="@dimen/dp_30"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_player_view_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="3"
            android:text="@string/video_error_unknown"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_14" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_player_view_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@drawable/bg_video_retry_button"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="@dimen/dp_20"
            android:paddingTop="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_8"
            android:text="@string/video_error_retry"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_14" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateDrawable="@drawable/bg_loading_progress_bar" />


</FrameLayout>
